--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav id="desktop-nav">
-        <div class="logo">John Doe</div>
+        <div class="logo">Juan Sebastian Salazar Rivera</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">John Doe</div>
+        <div class="logo">Juan Sebastian Salazar Rivera</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -44,7 +44,7 @@
         </div>
         <div class="section_text">
             <p class="section_text_p1">Hello, I'm</p>
-            <h1 class="title">John Doe</h1>
+            <h1 class="title">Juan Sebastian Salazar Rivera</h1>
             <p class="section_text_p2">Frontend Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
@@ -236,3 +236,44 @@
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
     </section>
+    <section id="contact">
+        <p class="section_text_p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+          <div class="contact-info-container">
+            <img
+              src="/assets/email.png"
+              alt="Email icon"
+              class="icon contact-icon email-icon"
+            />
+            <p>
+              <a href="mailto:examplemail@gmail.com">Example@gmail.com</a>
+            </p>
+          </div>
+          <div class="contact-info-container">
+            <img
+              src="/assets/linkedin.png"
+              alt="LinkedIn icon"
+              class="icon contact-icon"
+            />
+            <p>
+              <a href="https://www.linkedin.com">LinkedIn</a>
+            </p>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <nav>
+          <div class="nav-links-container">
+            <ul class="nav-links">
+              <li><a href="#about">About</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <p>&copy; 2023 Daniel Fernandez. All Rights Reserved.</p>
+      </footer>
+      <script src="script.js"></script>
+      </body>
