modificacion de perfil

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-                        reprehenderit et laborum, rem, dolore eum quod voluptate
-                        exercitationem nobis, nihil esse debitis maxime facere minus sint
-                        delectus velit in eos quo officiis explicabo deleniti dignissimos.
-                        Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-                        reiciendis ea magnam? Nulla, impedit fuga!
+                        Profesional en formación en Análisis y Desarrollo de Software 
+                        del SENA,con conocimientos<br> en las diferentes etapas del ciclo de 
+                        desarrollo de software, desde el análisis de los requisitos<br> 
+                        del cliente hasta la implementación y pruebas del sistema.<br><br>
+                        Habilidades en programación, análisis de datos, diseño de sistemas 
+                        y pruebas de software.<br><br> 
+                        Capacidad de trabajo en equipo, comunicación efectiva y resolución de problemas.
                     </p>
                 </div>
             </div>
