--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>My Portafolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
 </head>
@@ -43,9 +43,9 @@
             <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
         </div>
         <div class="section_text">
-            <p class="section_text_p1">Hola, soy</p>
+            <p class="section_text_p1">Hello, i'm</p>
             <h1 class="title">Juan Sebastian Salazar Rivera</h1>
-            <p class="section_text_p2">Desarrollador grafico</p>
+            <p class="section_text_p2">Graphic developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
                     Download CV
@@ -73,12 +73,12 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-                        <h3>Experiencia</h3>
+                        <h3>Experience</h3>
                         <p>2+ years <br />Frontend Development</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
-                        <h3>Educacion</h3><br>
+                        <h3>Education</h3><br>
                         <p>Bachiller Tecnico en sistemas<br />Tecnólogo en Análisis y Desarrollo de Software del SENA</p><br><br>
                     </div>
                 </div>
