--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </ul>
           </div>
         </nav>
-        <p>&copy; 2023 Daniel Fernandez. All Rights Reserved.</p>
+        <p>&copy; 2023 Sebastian Salazar. All Rights Reserved.</p>
       </footer>
       <script src="script.js"></script>
       </body>
